@@ -1,4 +1,4 @@
-# Copyright (C) 1998-2014 by the Free Software Foundation, Inc.
+# Copyright (C) 1998-2015 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -157,6 +157,10 @@ class IncomingRunner(Runner):
                     os._exit(1)
             except Errors.DiscardMessage:
                 # Throw the message away; we need do nothing else with it.
+                # We do need to push the current handler back in the pipeline
+                # just in case the syslog call throws an exception and the
+                # message is shunted.
+                pipeline.insert(0, handler)
                 syslog('vette', """Message discarded, msgid: %s'
         list: %s,
         handler: %s""",
@@ -169,6 +173,10 @@ class IncomingRunner(Runner):
                 return 0
             except Errors.RejectMessage, e:
                 # Log this.
+                # We do need to push the current handler back in the pipeline
+                # just in case the syslog call or BounceMessage throws an
+                # exception and the message is shunted.
+                pipeline.insert(0, handler)
                 syslog('vette', """Message rejected, msgid: %s
         list: %s,
         handler: %s,
