@@ -22,6 +22,10 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - It was possible under some circumstances for a message to be shunted
+      after a handler rejected or discarded it, and the handler would be
+      skipped upon unshunting and the message accepted.  (LP: #1519062)
+
     - Posts gated to usenet will no longer have other than the target group
       in the Newsgroups: header.  (LP: #1512866)
 
